tests/parsing/smtlib/v2.6/errors/001_identifier_index_2.expected
File "tests/parsing/smtlib/v2.6/errors/001_identifier_index_2.smt2", line 2, character 13-15:
2 | (assert (as (as) bar))
                 ^^
Error while parsing an identifier, read the reserved word 'as',
      but expected an underscore: identifiers starting with an opening
      parenthesis must be indexed identifiers, of the form "(_ symbol
      index+)".
